fix button spacing
web development.mov.tga.gif

[#88978056]

--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -45,15 +45,15 @@ svg .node.job.normal rect { fill: @base03; }
 .groups li.active a { background: @base03; }
 
 /* order here matters >:( */
-.build-header .trigger-build button { color: @base07; }
-.build-header .trigger-build button:hover { background: @base02; }
-.build-header .trigger-build button:active { background: @base04; }
-.build-header .trigger-build button:focus { background: @base04; }
+.build-header .trigger-build button i { color: @base07; }
+.build-header .trigger-build button i:hover { background: @base02; }
+.build-header .trigger-build button i:active { background: @base04; }
+.build-header .trigger-build button i:focus { background: @base04; }
 
-.build-header .abort-build button { color: @base08; }
-.build-header .abort-build button:hover { background: @base08; color: @base07; }
-.build-header .abort-build button:active { color: @base07; background: @base0F; }
-.build-header .abort-build button:focus { background: @base0F; }
+.build-header .abort-build button i { color: @base08; }
+.build-header .abort-build button i:hover { background: @base08; color: @base07; }
+.build-header .abort-build button i:active { color: @base07; background: @base0F; }
+.build-header .abort-build button i:focus { background: @base0F; }
 
 /* dim */
 svg .edge.pending { stroke: @base04; }
